fix(app): no always visible y scroll

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -11,6 +11,10 @@
   padding: 0;
 }
 
+html {
+  overflow-y: auto;
+}
+
 body {
   transition: color 0.5s, background-color 0.5s;
   font-size: 16px;
